[tool.poetry]
name = "project1-chevachin-gleb-m25-555"
version = "0.1.0"
description = "A simple console game"
authors = ["Gleb Chevachin <you@example.com>"]
readme = "README.md"
packages = [
 { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []